fix layout/spacing

--- a/PFML/BenefitsCalculator/src/components/Part2/index.scss
+++ b/PFML/BenefitsCalculator/src/components/Part2/index.scss
@@ -28,3 +28,10 @@
         display: block;
       }
 }
+
+.ma__input-group {
+	margin-top: 20px;
+	&-right {
+		margin-bottom: 20px;
+	}
+}
