--- a/PFML/BenefitsCalculator/src/components/Part3/index.scss
+++ b/PFML/BenefitsCalculator/src/components/Part3/index.scss
@@ -35,3 +35,7 @@
 .ma__help-text {
 	padding: 15px;
 }
+
+.ma__callout-alert {
+	margin-bottom: 40px;
+}
